[gd_scene load_steps=10 format=2]

[ext_resource path="res://player/Interaction.gd" type="Script" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://player/abilities/crosshair/Crosshair.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/player extras/hand.tscn" type="PackedScene" id=4]
[ext_resource path="res://player/abilities/footstep_sound/FootstepSound.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="CapsuleMesh" id=2]
radius = 0.5

[sub_resource type="CylinderMesh" id=3]
top_radius = 0.05
bottom_radius = 0.1
height = 0.5

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.21863, 0.367681, 0.230108 )

[node name="Player" type="KinematicBody" groups=[
"Player",
]]
transform = Transform( 1, 0, 0, 0, 1.69176, 0, 0, 0, 1, 0, 0, 0 )
collision_mask = 3
collision/safe_margin = 0.2
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
cast_shadow = 0
mesh = SubResource( 2 )
material/0 = null

[node name="Head" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0 )

[node name="Movements" type="Position3D" parent="Head"]

[node name="Camera" type="Camera" parent="Head/Movements"]

[node name="Muzzle" parent="Head/Movements/Camera" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.514598, -1.4, -1 )

[node name="Position3D" type="Position3D" parent="Head/Movements/Camera/Muzzle"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.597974, 1.10039, 0 )

[node name="Crosshair" parent="Head/Movements/Camera" instance=ExtResource( 3 )]

[node name="FootstepSound" parent="Head/Movements/Camera" instance=ExtResource( 6 )]

[node name="InteractionRayCast" type="RayCast" parent="Head/Movements/Camera"]
transform = Transform( 1, 0, 0, 0, 1.69176, 0, 0, 0, 1, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, -2 )
collision_mask = 2
collide_with_areas = true
script = ExtResource( 1 )

[node name="DirectionIndicator" type="MeshInstance" parent="Head"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, -0.5 )
layers = 0
mesh = SubResource( 3 )
material/0 = null

[node name="CrouchTween" type="Tween" parent="."]

[node name="CameraTween" type="Tween" parent="."]

[node name="ZoomTween" type="Tween" parent="."]

[node name="JumpTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0907437 )
shape = SubResource( 4 )

[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
